; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/display/extr_intel_hdmi.c_intel_hdmi_hdcp_read_bksv.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/display/extr_intel_hdmi.c_intel_hdmi_hdcp_read_bksv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_digital_port = type { i32 }

@DRM_HDCP_DDC_BKSV = common dso_local global i32 0, align 4
@DRM_HDCP_KSV_LEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"Read Bksv over DDC failed (%d)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.intel_digital_port*, i32*)* @intel_hdmi_hdcp_read_bksv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @intel_hdmi_hdcp_read_bksv(%struct.intel_digital_port* %0, i32* %1) #0 {
  %3 = alloca %struct.intel_digital_port*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.intel_digital_port* %0, %struct.intel_digital_port** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.intel_digital_port*, %struct.intel_digital_port** %3, align 8
  %7 = load i32, i32* @DRM_HDCP_DDC_BKSV, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* @DRM_HDCP_KSV_LEN, align 4
  %10 = call i32 @intel_hdmi_hdcp_read(%struct.intel_digital_port* %6, i32 %7, i32* %8, i32 %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %2
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @DRM_DEBUG_KMS(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %14)
  br label %16

16:                                               ; preds = %13, %2
  %17 = load i32, i32* %5, align 4
  ret i32 %17
}

declare dso_local i32 @intel_hdmi_hdcp_read(%struct.intel_digital_port*, i32, i32*, i32) #1

declare dso_local i32 @DRM_DEBUG_KMS(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
